--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ script:
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push emanjamal/simple-node
+  - docker push emanjamal/simple-node:latest
